Infrastructure/kubernetes/vault.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-dev
  labels:
    app: vault-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault-dev
  template:
    metadata:
      labels:
        app: vault-dev
    spec:
      containers:
        - name: vault
          image: hashicorp/vault:latest
          ports:
            - containerPort: 8201
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
          volumeMounts:
            - name: vault-tls
              mountPath: /data
              readOnly: true
      volumes:
        - name: vault-tls
          configMap:
            name: vault-tls
