Infrastructure/kubernetes/auction-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auction-service
  template:
    metadata:
      labels:
        app: auction-service
    spec:
      containers:
        - name: auction-service
          image: nikolaiauctionhouseprojectregistry.azurecr.io/auction-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7051
---
apiVersion: v1
kind: Service
metadata:
  name: auction-service
spec:
  selector:
    app: auction-service
  ports:
    - protocol: TCP
      port: 7051
      targetPort: 7051
  type: ClusterIP
