Infrastructure/kubernetes/bid-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bid-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bid-service
  template:
    metadata:
      labels:
        app: bid-service
    spec:
      containers:
        - name: bid-service
          image: nikolaiauctionhouseprojectregistry.azurecr.io/bid-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8051
---
apiVersion: v1
kind: Service
metadata:
  name: bid-service
spec:
  selector:
    app: bid-service
  ports:
    - protocol: TCP
      port: 8051
      targetPort: 8051
  type: LoadBalancer
