Infrastructure/kubernetes/catalog-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-service
  template:
    metadata:
      labels:
        app: catalog-service
    spec:
      containers:
        - name: catalog-service
          image: nikolaiauctionhouseprojectregistry.azurecr.io/catalog-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 6051
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
spec:
  selector:
    app: catalog-service
  ports:
    - protocol: TCP
      port: 6051
      targetPort: 6051
  type: LoadBalancer
