Infrastructure/kubernetes/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
      volumes:
        - name: postgres-data
          emptyDir: {} # Replace with PersistentVolumeClaim if needed

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auction-postgres
  template:
    metadata:
      labels:
        app: auction-postgres
    spec:
      containers:
        - name: auction-postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: auction-postgres-data
      volumes:
        - name: auction-postgres-data
          emptyDir: {} # Replace with PersistentVolumeClaim if needed

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bid-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bid-postgres
  template:
    metadata:
      labels:
        app: bid-postgres
    spec:
      containers:
        - name: bid-postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: bid-postgres-data
      volumes:
        - name: bid-postgres-data
          emptyDir: {} # Replace with PersistentVolumeClaim if needed
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP

apiVersion: v1
kind: Service
metadata:
  name: auction-postgres
spec:
  selector:
    app: auction-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP


apiVersion: v1
kind: Service
metadata:
  name: bid-postgres
spec:
  selector:
    app: bid-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
